# backend

./: .env.example  .gitignore  Dockerfile  README.md  config.py  main.py  pyproject.toml  requirements.txt  schema.sql  shell.nix
.github/workflows/: build.yml  build_main.yml  ruff.yml
auth/: hasher.py  models.py  router.py  utils.py
data/: What is Debian.docx  What is Debian.txt  demo_text.txt
db/: chat_history.py  client.py  database_chunks.py  database_documents.py  files.py  model_settings.py  users.py
query_manager/: __init__.py  query_manager.py  test.py
scripts/: demo_insert.py  insert.py  routing.py
services/: chat.py  chat_history.py  context.py  crypto.py  embedding.py  files.py  model_settings.py  parser.py  prompt.py  upload.py
test/: test_database_chunks.py  test_db_connection.py  test_import.py  test_parser.py  test_query_manager.py
