[tool.poetry]
name = "mvxmt-backend"
version = "0.1.0"
description = ""
authors = ["ninjawarrior1337 <me@treelar.xyz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.4"}
pyjwt = "^2.9.0"
passlib = "^1.7.4"
python-dotenv = "^1.0.1"
argon2-cffi = "^23.1.0"
pydantic-settings = "^2.6.1"
asyncpg = "^0.30.0"
psycopg = {extras = ["binary"], version = "^3.2.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
