[project]
name = "mvxmt-backend"
version = "0.1.0"
description = ""
authors = [{ name = "ninjawarrior1337", email = "me@treelar.xyz" }]
requires-python = "~=3.12"
readme = "README.md"
dependencies = [
    "fastapi[standard]>=0.115.4,<0.116",
    "pyjwt>=2.9.0,<3",
    "passlib>=1.7.4,<2",
    "python-dotenv>=1.0.1,<2",
    "argon2-cffi>=23.1.0,<24",
    "pydantic-settings>=2.6.1,<3",
    "asyncpg>=0.30.0,<0.31",
    "psycopg[binary]>=3.2.3,<4",
    "pytest>=8.3.4,<9",
    "pytest-asyncio>=0.24.0,<0.25",
    "ollama>=0.4.2,<0.5",
    "numpy>=2.1.3,<3",
    "more-itertools>=10.5.0,<11",
    "python-ulid[pydantic]>=3.0.0,<4",
    "cryptography>=44.0.1,<45",
    "tqdm>=4.67.1,<5",
    "unstructured[docx,rtf]>=0.14.8",
    "chonkie[hub,semantic]>=0.5.1",
    "sentence-transformers>=4.1.0",
]

[dependency-groups]
dev = ["ruff>=0.8.1,<0.9"]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
